fix: set overflow-wrap for InlineCode, to break word if too long to fit on one line - test with the zsh profile blog post

--- a/src/components/inline-code/styles.module.css
+++ b/src/components/inline-code/styles.module.css
@@ -10,6 +10,7 @@
 	word-spacing: normal;
 	word-break: normal;
 	word-wrap: normal;
+	overflow-wrap: break-word;
 
 	line-height: 1.5;
 
